--- a/LabbBlazor/Components/Pages/NewUser.razor
+++ b/LabbBlazor/Components/Pages/NewUser.razor
@@ -3,24 +3,47 @@
 @rendermode InteractiveServer
 <h3>New User</h3>
 
-    <EditForm Model="@_user" OnValidSubmit="HandleValidSubmit">
-        <DataAnnotationsValidator />        
-        <InputText id="name" @bind-Value="_user.Name" />        
-        <ValidationMessage For="@(() => _user.Name)" />
-        <InputText id="email" @bind-Value="_user.Email" />
-        <ValidationMessage For="@(() => _user.Email)" />
-        <InputText id="street" @bind-Value="_user.Address.Street" />
-        <ValidationMessage For="@(() => _user.Address.Street)" />
-        <InputText id="city" @bind-Value="_user.Address.City" />
-        <ValidationMessage For="@(() => _user.Address.City)" />
-        <InputText id="zipcode" @bind-Value="_user.Address.ZipCode" />
-        <ValidationMessage For="@(() => _user.Address.ZipCode)" />
-        <InputText id="companyname" @bind-Value="_user.Company.Name" />
-        <ValidationMessage For="@(() => _user.Company.Name)" />
-        <InputText id="companycatchphrase" @bind-Value="_user.Company.CatchPhrase" />
-        <ValidationMessage For="@(() => _user.Company.CatchPhrase)" />
-        <button type="submit">Submit</button>
-    </EditForm>
+<EditForm Model="@_user" OnValidSubmit="HandleValidSubmit">
+    <DataAnnotationsValidator />
+    <div>
+        <label>
+            Full Name:<br />
+            <InputText id="name" @bind-Value="_user.Name" />
+            <ValidationMessage For="@(() => _user.Name)" />
+        </label><br />
+        <label>
+            Email:<br />
+            <InputText id="email" @bind-Value="_user.Email" />
+            <ValidationMessage For="@(() => _user.Email)" />
+        </label><br />
+        <label>
+            Street:<br />
+            <InputText id="street" @bind-Value="_user.Address.Street" />
+            <ValidationMessage For="@(() => _user.Address.Street)" />
+        </label>:<br />
+        <label>
+            City:<br />
+            <InputText id="city" @bind-Value="_user.Address.City" />
+            <ValidationMessage For="@(() => _user.Address.City)" />
+        </label><br />
+        <label>
+            Zip Code:<br />
+            <InputText id="zipcode" @bind-Value="_user.Address.ZipCode" />
+            <ValidationMessage For="@(() => _user.Address.ZipCode)" />
+        </label><br />
+        <label>
+            Company Name:<br />
+            <InputText id="companyname" @bind-Value="_user.Company.Name" />
+            <ValidationMessage For="@(() => _user.Company.Name)" />
+        </label><br />
+        <label>
+            Company Catchphrase:<br />
+            <InputText id="companycatchphrase" @bind-Value="_user.Company.CatchPhrase" />
+            <ValidationMessage For="@(() => _user.Company.CatchPhrase)" />
+        </label><br />
+    </div>
+    <button type="submit">Submit</button>
+</EditForm>
 
 
 @code {
