Added Json DataLayer

--- a/LabbBlazor/Components/Pages/NewUser.razor
+++ b/LabbBlazor/Components/Pages/NewUser.razor
@@ -33,7 +33,7 @@
                 </label><br />
                 <label>
                     Zip Code:<br />
-                    <InputNumber id="zipcode" @bind-Value="_newUser.AddressZipCode" />
+                    <InputText id="zipcode" @bind-Value="_newUser.AddressZipCode" />
                     <ValidationMessage For="@(() => _newUser.AddressZipCode)" />
                 </label><br />
                 <label>
