--- a/LabbBlazor/Components/Pages/Users.razor
+++ b/LabbBlazor/Components/Pages/Users.razor
@@ -8,6 +8,7 @@
 }
 else
 {
+    <p></p>
     <table class="table">
         <thead>
             <tr>
@@ -48,7 +49,7 @@ else
     {
         await Task.Delay(1000);
 
-        SampleDataAccess dataAccess = new SampleDataAccess();
+        IDataAccess dataAccess = new JSONDataAccess();
         _users = dataAccess.GetUsers().OrderBy(x => x.Name).ToList();
         _shownUsers = 5;
     }
@@ -56,4 +57,5 @@ else
     {
         _shownUsers = (_users != null) ? _users.Count : 0;
     }
+    
 }
