--- a/LabbBlazor/Components/Pages/Users.razor
+++ b/LabbBlazor/Components/Pages/Users.razor
@@ -14,17 +14,21 @@ else
         <p>Please contact admin, displaying sample data</p>
     }
 
-    <select @onchange="OnSortChanged">
-        <option value="name">Sort by Name</option>
-        <option value="id">Sort by ID</option>
-    </select>
+    <InputSelect @bind-Value="_sortAndSearcher.SearchOption">
+        @foreach (var searchOption in Enum.GetValues(typeof(SearchOption)))
+        {
+            <option value="@searchOption">Search by @searchOption</option>
+        }
+    </InputSelect>
 
-    <select @bind="_searchOption">
-        <option value="name">Search by Name</option>
-        <option value="city">Search by City</option>
-    </select>
+    <InputSelect @bind-Value="_sortAndSearcher.SortOption" @bind-Value:after=Sort>
+        @foreach (var sortOption in Enum.GetValues(typeof(SortOption)))
+        {
+            <option value="@sortOption">Sort by @sortOption</option>
+        }
+    </InputSelect>
 
-    <input id="search" @bind-value="_searchString" @oninput=OnSearchInput />
+    <input id="search" @bind-value="_sortAndSearcher.SearchTerm" @oninput=OnSearchInput />
 
     <table class="table">
         <thead>
@@ -40,21 +44,18 @@ else
             </tr>
         </thead>
         <tbody>
-            @for (int i = 0; i < _shownUsers; i++)
+            @foreach (var user in _searchedSortedUsers)
             {
-                if (SearchUser(_users[i]))
-                {
-                    <tr>
-                        <td>@_users[i].ID</td>
-                        <td>@_users[i].Name</td>
-                        <td>@_users[i].Email</td>
-                        <td>@_users[i].Address.City</td>
-                        <td>@_users[i].Address.Street</td>
-                        <td>@_users[i].Address.ZipCode</td>
-                        <td>@_users[i].Company.Name</td>
-                        <td>@_users[i].Company.CatchPhrase</td>
-                    </tr>
-                }
+                <tr>
+                    <td>@user.ID</td>
+                    <td>@user.Name</td>
+                    <td>@user.Email</td>
+                    <td>@user.Address.City</td>
+                    <td>@user.Address.Street</td>
+                    <td>@user.Address.ZipCode</td>
+                    <td>@user.Company.Name</td>
+                    <td>@user.Company.CatchPhrase</td>
+                </tr>
             }
         </tbody>
     </table>
@@ -64,19 +65,26 @@ else
 
 @code {
     private List<User> _users = new List<User>();
+    private List<User> _numberofUsers = new List<User>();
+    private List<User> _searchedSortedUsers = new List<User>();
     private IDataAccess? _dataAccess;
-    private int _shownUsers = 0;
-    private string _sortOption = "name";
-    private string? _userDataErrorMessage;
-    private string _searchString = string.Empty;
-    private string _searchOption = "name";
+    private SearchSort _sortAndSearcher = new SearchSort();
+    private int _shownUsers;
 
-    protected override async Task OnInitializedAsync()
+    private string? _userDataErrorMessage;
+
+    protected override void OnInitialized()
     {
-        await Task.Delay(1000);
+        Task.Delay(1000);
         SetUserData();
-        SortUsers();
+
         _shownUsers = 5;
+        ShowNumberOfUsers();
+        _searchedSortedUsers = _numberofUsers;
+        _sortAndSearcher.SortOption = SortOption.Name;
+        _sortAndSearcher.SearchOption = SearchOption.Name;
+        OrderByName();
+
     }
 
     private void SetUserData()
@@ -104,41 +112,70 @@ else
     private void ShowAllEventHandler()
     {
         _shownUsers = (_users != null) ? _users.Count : 0;
+        ShowNumberOfUsers();
+        Search();
     }
-
-    private void OnSortChanged(ChangeEventArgs e)
+    private void ShowNumberOfUsers()
     {
-        _sortOption = e.Value?.ToString() ?? _sortOption;
-        SortUsers();
+        _numberofUsers = _users.FilterByAmount(_shownUsers);
     }
-
+    private void OrderByName()
+    {
+        _searchedSortedUsers = _searchedSortedUsers.SortByName();
+    }
+    private void OrderById()
+    {
+        _searchedSortedUsers = _searchedSortedUsers.SortById();
+    }
+    private void SearchByName()
+    {
+        _searchedSortedUsers = _numberofUsers.SearchByName(_sortAndSearcher.SearchTerm);
+    }
+    private void SearchByCity()
+    {
+        _searchedSortedUsers = _numberofUsers.SearchByCity(_sortAndSearcher.SearchTerm);
+    }
     private void OnSearchInput(ChangeEventArgs e)
     {
-        _searchString = e.Value?.ToString() ?? _searchString;
+        _sortAndSearcher.SearchTerm = e.Value?.ToString() ?? string.Empty;
+        Search();
+        Sort();
+    }
+    private void Search()
+    {
+        switch (_sortAndSearcher.SearchOption)
+        {
+            case SearchOption.Name: SearchByName(); break;
+            case SearchOption.City: SearchByCity(); break;
+        }
+    }
+    private void Sort()
+    {
+        switch (_sortAndSearcher.SortOption)
+        {
+            case SortOption.Name: OrderByName(); break;
+            case SortOption.ID: OrderById(); break;
+        }
+    }
+    public enum SearchOption
+    {
+        Name,
+        City
+    }
+    public enum SortOption
+    {
+        Name,
+        ID
+    }
+    public class SearchSort
+    {
+        public SortOption SortOption { get; set; }
+        public SearchOption SearchOption { get; set; }
+        public string SearchTerm { get; set; }
+        public SearchSort()
+        {
+            SearchTerm = string.Empty;
+        }
     }
 
-
-    private void SortUsers()
-    {
-        if (_sortOption == "id")
-        {
-            _users = _users.OrderBy(p => p.ID).ToList();
-        }
-        else if (_sortOption == "name")
-        {
-            _users = _users.OrderBy(p => p.Name).ToList();
-        }
-    }
-    private bool SearchUser(User currentUser)
-    {
-        if (_searchOption == "name")
-        {
-            return currentUser.Name!.ToLower().Contains(_searchString.ToLower());
-        }
-        else if (_searchOption == "city")
-        {
-            return currentUser.Address.City!.ToLower().Contains(_searchString.ToLower());
-        }
-        return false;
-    }
 }
